<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:CircleProgressView="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.paxdron.kinnovbeta.valores">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reaction_parent"
        android:orientation="vertical"
        >
        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/btn_Start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            fancy:fb_borderColor="#FFFFFF"
            fancy:fb_borderWidth="1dp"
            fancy:fb_focusColor="#9bd823"
            fancy:fb_iconPosition="left"
            fancy:fb_radius="30dp"
            fancy:fb_text="@string/stim_mode"
            fancy:fb_textColor="#FFFFFF"
            fancy:fb_defaultColor="@color/colorAccent"
            android:onClick="selectStMode"
            android:layout_gravity="center_horizontal"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1.0"
            android:gravity="center_horizontal"
            >
            <LinearLayout
                android:layout_margin="3dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/carrier"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"
                    />

                <at.grabner.circleprogress.CircleProgressView
                    android:id="@+id/cvCarrier"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    CircleProgressView:cpv_value="10"
                    CircleProgressView:cpv_maxValue="60"
                    CircleProgressView:cpv_barColor="@color/colorPrimary"
                    CircleProgressView:cpv_rimColor="@color/colorAccent"
                    CircleProgressView:cpv_textColor="@color/colorPrimaryDark"
                    CircleProgressView:cpv_unitColor="@color/colorAccent"
                    CircleProgressView:cpv_spinColor="@color/colorPrimary"
                    CircleProgressView:cpv_barWidth="20dp"
                    CircleProgressView:cpv_rimWidth="20dp"
                    CircleProgressView:cpv_contourSize="0dp"
                    CircleProgressView:cpv_autoTextSize="true"
                    CircleProgressView:cpv_seekMode="true"
                    CircleProgressView:cpv_unit="@string/khz"
                    CircleProgressView:cpv_unitPosition="right_top"
                    CircleProgressView:cpv_unitScale="1"
                    CircleProgressView:cpv_textScale="1"
                    CircleProgressView:cpv_showUnit="true"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_margin="3dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/duracion_burst"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    />
                <at.grabner.circleprogress.CircleProgressView
                    android:id="@+id/cvDuracionB"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    CircleProgressView:cpv_value="2"
                    CircleProgressView:cpv_maxValue="4"
                    CircleProgressView:cpv_barColor="@color/colorPrimary"
                    CircleProgressView:cpv_rimColor="@color/colorAccent"
                    CircleProgressView:cpv_textColor="@color/colorPrimaryDark"
                    CircleProgressView:cpv_unitColor="@color/colorAccent"
                    CircleProgressView:cpv_spinColor="@color/colorPrimary"
                    CircleProgressView:cpv_barWidth="20dp"
                    CircleProgressView:cpv_rimWidth="20dp"
                    CircleProgressView:cpv_contourSize="0dp"
                    CircleProgressView:cpv_autoTextSize="true"
                    CircleProgressView:cpv_unit="@string/ms"
                    CircleProgressView:cpv_unitPosition="right_top"
                    CircleProgressView:cpv_unitScale="1"
                    CircleProgressView:cpv_textScale="1"
                    CircleProgressView:cpv_showUnit="true"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_margin="3dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/frecuencia_burst"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    />
                <at.grabner.circleprogress.CircleProgressView
                    android:id="@+id/cvFrecuenciaB"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    CircleProgressView:cpv_value="10"
                    CircleProgressView:cpv_maxValue="120"
                    CircleProgressView:cpv_barColor="@color/colorPrimary"
                    CircleProgressView:cpv_rimColor="@color/colorAccent"
                    CircleProgressView:cpv_textColor="@color/colorPrimaryDark"
                    CircleProgressView:cpv_unitColor="@color/colorAccent"
                    CircleProgressView:cpv_spinColor="@color/colorPrimary"
                    CircleProgressView:cpv_barWidth="20dp"
                    CircleProgressView:cpv_rimWidth="20dp"
                    CircleProgressView:cpv_contourSize="0dp"
                    CircleProgressView:cpv_autoTextSize="true"
                    CircleProgressView:cpv_unit="Hz"
                    CircleProgressView:cpv_unitPosition="right_top"
                    CircleProgressView:cpv_unitScale="1"
                    CircleProgressView:cpv_textScale="1"
                    CircleProgressView:cpv_showUnit="true"
                    />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1.0"
            android:gravity="center_horizontal"
            >
            <LinearLayout
                android:layout_margin="3dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rise"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    />
                <at.grabner.circleprogress.CircleProgressView
                    android:id="@+id/cvRise"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    CircleProgressView:cpv_value="10"
                    CircleProgressView:cpv_maxValue="60"
                    CircleProgressView:cpv_barColor="@color/colorPrimary"
                    CircleProgressView:cpv_rimColor="@color/colorAccent"
                    CircleProgressView:cpv_textColor="@color/colorPrimaryDark"
                    CircleProgressView:cpv_unitColor="@color/colorAccent"
                    CircleProgressView:cpv_spinColor="@color/colorPrimary"
                    CircleProgressView:cpv_barWidth="20dp"
                    CircleProgressView:cpv_rimWidth="20dp"
                    CircleProgressView:cpv_contourSize="0dp"
                    CircleProgressView:cpv_autoTextSize="true"
                    CircleProgressView:cpv_seekMode="true"
                    CircleProgressView:cpv_unit="ms"
                    CircleProgressView:cpv_unitPosition="right_top"
                    CircleProgressView:cpv_unitScale="1"
                    CircleProgressView:cpv_textScale="1"
                    CircleProgressView:cpv_showUnit="true"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_margin="3dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/on"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    />
                <at.grabner.circleprogress.CircleProgressView
                    android:id="@+id/cvON"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    CircleProgressView:cpv_value="10"
                    CircleProgressView:cpv_maxValue="120"
                    CircleProgressView:cpv_barColor="@color/colorPrimary"
                    CircleProgressView:cpv_rimColor="@color/colorAccent"
                    CircleProgressView:cpv_textColor="@color/colorPrimaryDark"
                    CircleProgressView:cpv_unitColor="@color/colorAccent"
                    CircleProgressView:cpv_spinColor="@color/colorPrimary"
                    CircleProgressView:cpv_barWidth="20dp"
                    CircleProgressView:cpv_rimWidth="20dp"
                    CircleProgressView:cpv_contourSize="0dp"
                    CircleProgressView:cpv_autoTextSize="true"
                    CircleProgressView:cpv_unit="Hz"
                    CircleProgressView:cpv_unitPosition="right_top"
                    CircleProgressView:cpv_unitScale="1"
                    CircleProgressView:cpv_textScale="1"
                    CircleProgressView:cpv_showUnit="true"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_margin="3dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/decay"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    />
                <at.grabner.circleprogress.CircleProgressView
                    android:id="@+id/cvDecay"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    CircleProgressView:cpv_value="10"
                    CircleProgressView:cpv_maxValue="120"
                    CircleProgressView:cpv_barColor="@color/colorPrimary"
                    CircleProgressView:cpv_rimColor="@color/colorAccent"
                    CircleProgressView:cpv_textColor="@color/colorPrimaryDark"
                    CircleProgressView:cpv_unitColor="@color/colorAccent"
                    CircleProgressView:cpv_spinColor="@color/colorPrimary"
                    CircleProgressView:cpv_barWidth="20dp"
                    CircleProgressView:cpv_rimWidth="20dp"
                    CircleProgressView:cpv_contourSize="0dp"
                    CircleProgressView:cpv_autoTextSize="true"
                    CircleProgressView:cpv_unit="Hz"
                    CircleProgressView:cpv_unitPosition="right_top"
                    CircleProgressView:cpv_unitScale="1"
                    CircleProgressView:cpv_textScale="1"
                    CircleProgressView:cpv_showUnit="true"
                    />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1.0"
            android:gravity="center_horizontal"
            >
            <LinearLayout
                android:layout_margin="3dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/off"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    />
                <at.grabner.circleprogress.CircleProgressView
                    android:id="@+id/cvOFF"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    CircleProgressView:cpv_value="10"
                    CircleProgressView:cpv_maxValue="60"
                    CircleProgressView:cpv_barColor="@color/colorPrimary"
                    CircleProgressView:cpv_rimColor="@color/colorAccent"
                    CircleProgressView:cpv_textColor="@color/colorPrimaryDark"
                    CircleProgressView:cpv_unitColor="@color/colorAccent"
                    CircleProgressView:cpv_spinColor="@color/colorPrimary"
                    CircleProgressView:cpv_barWidth="20dp"
                    CircleProgressView:cpv_rimWidth="20dp"
                    CircleProgressView:cpv_contourSize="0dp"
                    CircleProgressView:cpv_autoTextSize="true"
                    CircleProgressView:cpv_seekMode="true"
                    CircleProgressView:cpv_unit="ms"
                    CircleProgressView:cpv_unitPosition="right_top"
                    CircleProgressView:cpv_unitScale="1"
                    CircleProgressView:cpv_textScale="1"
                    CircleProgressView:cpv_showUnit="true"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_margin="3dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tiempo_aplicacion"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    />
                <at.grabner.circleprogress.CircleProgressView
                    android:id="@+id/cvMin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    CircleProgressView:cpv_value="10"
                    CircleProgressView:cpv_maxValue="120"
                    CircleProgressView:cpv_barColor="@color/colorPrimary"
                    CircleProgressView:cpv_rimColor="@color/colorAccent"
                    CircleProgressView:cpv_textColor="@color/colorPrimaryDark"
                    CircleProgressView:cpv_unitColor="@color/colorAccent"
                    CircleProgressView:cpv_spinColor="@color/colorPrimary"
                    CircleProgressView:cpv_barWidth="20dp"
                    CircleProgressView:cpv_rimWidth="20dp"
                    CircleProgressView:cpv_contourSize="0dp"
                    CircleProgressView:cpv_autoTextSize="true"
                    CircleProgressView:cpv_unit="Hz"
                    CircleProgressView:cpv_unitPosition="right_top"
                    CircleProgressView:cpv_unitScale="1"
                    CircleProgressView:cpv_textScale="1"
                    CircleProgressView:cpv_showUnit="true"
                    />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>